--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-kdeconnect (0.8-1.1) UNRELEASED; urgency=medium
+kdeconnect (0.9g-1) UNRELEASED; urgency=medium
 
   * Team upload.
+  * New upstream release.
 
  -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 01 Feb 2016 17:49:26 -0300
 
