--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ kdeconnect (0.9g-1) UNRELEASED; urgency=medium
       names from your packaging.
     - Remove unnecesary removals in debian/rules.
   * Update README.md installation.
+  * Disable NetworkPackageTests::networkPackageIdentityTest as it seems to
+    require network access.
 
  -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 01 Feb 2016 17:49:26 -0300
 
