--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ kdeconnect (0.9g-1) UNRELEASED; urgency=medium
     - Add new build dependencies and dependencies as required. Thanks to the
       Ubuntu folks for they work! I have taken most of the correct build deps
       names from your packaging.
-    - Remove unnecesary removals in debian/rules.
+    - Remove unnecessary removals in debian/rules.
   * Update README.md installation.
   * Disable NetworkPackageTests::networkPackageIdentityTest as it seems to
     run fine with network access but fail without it (and thus on sbuild).
