--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ kdeconnect (0.9g-1) UNRELEASED; urgency=medium
   * Disable NetworkPackageTests::networkPackageIdentityTest as it seems to
     run fine with network access but fail without it (and thus on sbuild).
   * Add libqca-qt5-2-plugins as a build dependency, it is needed by the tests.
+  * Update lintian overrides.
 
  -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 01 Feb 2016 17:49:26 -0300
 
