--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kdeconnect (0.9g-1) UNRELEASED; urgency=medium
+kdeconnect (0.9g-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release.
@@ -16,7 +16,7 @@ kdeconnect (0.9g-1) UNRELEASED; urgency=medium
   * Update lintian overrides.
   * Update and simplify debian/copyright.
 
- -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 01 Feb 2016 17:49:26 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 05 Feb 2016 00:53:25 -0300
 
 kdeconnect (0.8-1) unstable; urgency=medium
 
